include/cassette/cstr.h

/************************************************************************************************************/
/* TYPES ****************************************************************************************************/
/************************************************************************************************************/

/**
 * Opaque string object. Theses strings have the particularity of storing not just the string char array along
 * with its size, but they also keep track of the number of UTF-8 multi-byte characters, the number of rows 
 * and columns. It's assumed that all UTF-8 characters are 1 column wide. But it does not differencies between
 * printable or non printable characters. The only exception to this width rule are tab characters, whose
 * width can be customized with cstr_set_tab_width().
 *
 * Some methods, upon failure, will set an error that can be checked with cstr_error(). If any error is set
 * all string methods will exit early with default return values and no side-effects. It's possible to clear
 * errors with cstr_repair().
 */
typedef struct cstr cstr;
/**
 * Converts the given UTF-8 character offset into a byte offset.
 * This function is bounds-protected, so the offset parameter is capped at the string's length, even if
 * a SIZE_MAX value is supplied.
 *
 * @param str    : String to interact with
 * @param offset : UTF-8 character offset
 *
 * @return     : Converted offset in bytes
 * @return_err : 0
 */
size_t
cstr_byte_offset(const cstr *str, size_t offset)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Gets the raw NUL terminated C string.
 *
 * @param str : String to interact with
 *
 * @return     : Raw C string
 * @return_err : "\0"
 */
const char *
cstr_chars(const cstr *str)
CSTR_NONNULL_RETURN
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Converts the given 2d coordinates into a UTF-8 character offset.
 * This function is bounds-protected, so the row and col parameter are capped at the string's height and
 * width respectively, even if SIZE_MAX values are supplied.
 *
 * @param str : String to interact with
 * @param row : Row index
 * @param col : Columns index
 *
 * @return     : Converted offset in number of UTF-8 characters
 * @return_err : 0
 */
size_t
cstr_coords_offset(const cstr *str, size_t row, size_t col)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Gets the error state.
 *
 * @param str : String to interact with
 *
 * @return : Error value
 */
enum cerr
cstr_error(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Get the number of rows.
 *
 * @param str : String to interact with
 *
 * @return     : Number of rows
 * @return_err : 0
 */
size_t
cstr_height(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Gets the number of UTF-8 characters a string is made of. Unlike cstr_byte_length(), the NUL terminator is
 * not included.
 *
 * @param str : String to interact with
 *
 * @return     : Number of UTF-8 characters
 * @return_err : 0
 */
size_t
cstr_length(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Calculates the number of rows a string wrapped with max_width will have. But unlike cstr_wrap() the string
 * is not modified.
 *
 * @param str       : String to interact with
 * @param max_width : Width after which a newline is added to the string
 *
 * @return     : Number of rows
 * @return_err : 0
 */
size_t
cstr_test_wrap(const cstr *str, size_t max_width)
CSTR_NONNULL(1)
CSTR_PURE;
/**
 * Converts the UTF-8 character offset of a wrapped string into an offset that matches the character position
 * of the unwrapped string. It is assumed the difference between str_wrap and str is a single cstr_wrap()
 * operation and that the tab width of both strings is equal. Check out the provided example for more
 * details about this function use case.
 * This function is bounds-protected, so the offset parameter is capped at the string's length, even if
 * a SIZE_MAX value is supplied.
 *
 * @param str      : Reference string
 * @param str_wrap : Wrapped string
 * @param offset   : UTF-8 character offset
 *
 * @return     : Converted offset in number of UTF-8 characters
 * @return_err : 0
 */
size_t
cstr_unwrapped_offset(const cstr *str, const cstr *str_wrap, size_t offset)
CSTR_NONNULL(1, 2)
CSTR_PURE;
/**
 * Gets the number of columns. The NUL terminator and newline characters are not included.
 *
 * @param str : String to interact with
 *
 * @return     : Number of columns
 * @return_err : 0
 */
size_t
cstr_width(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;