src/cassette-str.adb


	function Byte_Offset (Self : in T; Offset : in Index) return Index
	is
		function Fn (Data : System.Address; Offset : size_t) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_byte_offset";
	begin

		return Index (Fn (Self.Data, size_t (Offset)));

	end Byte_Offset;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Chars (Self : in T) return String
	is
		function Fn (Data : System.Address) return C.Strings.chars_ptr
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_chars";
	begin

		return C.Strings.Value (Fn (Self.Data));

	end Chars;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Chars_At_Coords (Self : in T; Row : in Index; Col : in Index) return String
	is
		function Fn (Data : System.Address; Row : size_t; Col : size_t) return C.Strings.chars_ptr
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_chars";
	begin

		return C.Strings.Value (Fn (Self.Data, size_t (Row), size_t (Col)));

	end Chars_At_Coords;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Chars_At_Offset (Self : in T; Offset : in Index) return String
	is
		function Fn (Data : System.Address; Offset : size_t) return C.Strings.chars_ptr
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_chars";
	begin

		return C.Strings.Value (Fn (Self.Data, size_t (Offset)));

	end Chars_At_Offset;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Coords_Offset (Self : in T; Row : in Index; Col : in Index) return Index
	is
		function Fn (Data : System.Address; Row : size_t; Col : size_t) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_coords_offset";
	begin

		return Index (Fn (Self.Data, size_t (Row), size_t (Col)));

	end Coords_Offset;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Error (Self : in T) return Cassette.Error.T
	is
		function Fn (Data : System.Address) return unsigned
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_error";
	begin

		return Cassette.Error.T (Fn (Self.Data));

	end Error;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Height (Self : in T) return Size
	is
		function Fn (Data : System.Address) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_height";
	begin

		return Size (Fn (Self.Data));

	end Height;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Length (Self : in T) return Size
	is
		function Fn (Data : System.Address) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_length";
	begin

		return Size (Fn (Self.Data));

	end Length;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Test_Wrap (Self : in T; Max_Width : in Size) return Size
	is
		function Fn (Data : System.Address; Max_Width : size_t) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_test_wrap";
	begin

		return Size (Fn (Self.Data, size_t (Max_Width)));

	end Test_Wrap;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Unwrapped_Offset (Self : in T; Wrap : in T; Offset : Index) return Index
	is
		function Fn (Data : System.Address; Wrap : System.Address; Offset : size_t) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_unwrapped_offset";
	begin

		return Index (Fn (Self.Data, Wrap.Data, size_t (Offset)));

	end Unwrapped_Offset;

	-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --

	function Width (Self : in T) return Size
	is
		function Fn (Data : System.Address) return size_t
			with Import        => True, 
			     Convention    => C, 
			     External_Name => "cstr_width";
	begin

		return Size (Fn (Self.Data));

	end Width;

	-------------------------------------------------------------------------------------------------
	-- PRIVATE METHODS ------------------------------------------------------------------------------ 
	-------------------------------------------------------------------------------------------------

	procedure Check (Self : in T) is
	begin

		if Self.Error > 0
		then
			raise E;
		end if;

	end Check;


end Cassette.Str;
